gcc/ 	PR middle-end/80823 	* tree-cfg.c (group_case_labels_stmt): Delete increment of "i";

gcc/testsuite/
	PR middle-end/80823
	* gcc.dg/pr80823.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@248408 138bc75d-0d04-0410-961f-82ee72b054a4